' Generated by UML Generator
' Encoded: VLD1JiCm4Bpd5NjCLINY745K1492GgXI41V4OUiigMaIMxPJQ4lxTfmuJTogwYqxEpiUppepRL2PfYe3lUArH8KLi1ArlZT6yKLZw9c9EkDRWfjWoNC2nXKhAGWw5in9IbAYvdE-tIBi0e3fAHPEWlsH_L1YvH67qd5meOr2Pg2N7eY76YjA8BEEwgAjSz4KIn_GsB0JXX5Isa-Tm0lNvjOrKhY3cdxW6zSODuQNyRrIkEaOgVK044MjBwd89a7X986ru7aBBN1rKhF6dBJ5hryMP5wjvHRgBOqHB8aq-I6CW1_LEnK5ztaUuFCwu8sqULHyJOwwiqirdEsXGbw7gDeOd8-FpwFBGI3ZbIoTxfCDNwYD4s6AqFJdcOqSqhK27NXc8REJxlZ3bvD9BaWF4OypuHLwkvAfK3cfwpxENc4K_QLzStnnFkZjm8Fzo3tuGa1nV6nwTu-YzDADFSOuDgCwjp_TFm
' URL: http://www.plantuml.com/plantuml/uml/VLD1JiCm4Bpd5NjCLINY745K1492GgXI41V4OUiigMaIMxPJQ4lxTfmuJTogwYqxEpiUppepRL2PfYe3lUArH8KLi1ArlZT6yKLZw9c9EkDRWfjWoNC2nXKhAGWw5in9IbAYvdE-tIBi0e3fAHPEWlsH_L1YvH67qd5meOr2Pg2N7eY76YjA8BEEwgAjSz4KIn_GsB0JXX5Isa-Tm0lNvjOrKhY3cdxW6zSODuQNyRrIkEaOgVK044MjBwd89a7X986ru7aBBN1rKhF6dBJ5hryMP5wjvHRgBOqHB8aq-I6CW1_LEnK5ztaUuFCwu8sqULHyJOwwiqirdEsXGbw7gDeOd8-FpwFBGI3ZbIoTxfCDNwYD4s6AqFJdcOqSqhK27NXc8REJxlZ3bvD9BaWF4OypuHLwkvAfK3cfwpxENc4K_QLzStnnFkZjm8Fzo3tuGa1nV6nwTu-YzDADFSOuDgCwjp_TFm
' Generated on: 2025-12-07T20:25:18.545740

@startuml
skinparam classAttributeIconSize 0
hide circle

class PepperoniPizza {
  +PepperoniPizza()
}

class ClamPizza {
  +ClamPizza()
}

abstract class Pizza {
  ~name: String
  ~dough: String
  ~sauce: String
  ~toppings: List<String> = new java.util.ArrayList<>()
  --
  +prepare(): void
  +bake(): void
  +cut(): void
  +box(): void
  +getName(): String
}

class CheesePizza {
  +CheesePizza()
}

class VeggiePizza {
  +VeggiePizza()
}

class PizzaTestDrive {
  +{static} main(args: String[]): void
}

class SimplePizzaFactory {
  +createPizza(type: String): Pizza
}

class PizzaStore {
  ~factory: SimplePizzaFactory
  --
  +PizzaStore(factory: SimplePizzaFactory)
  +orderPizza(type: String): Pizza
}

PepperoniPizza --|> Pizza
ClamPizza --|> Pizza
CheesePizza --|> Pizza
VeggiePizza --|> Pizza
SimplePizzaFactory ..> Pizza
PizzaStore --> SimplePizzaFactory
PizzaStore ..> Pizza
@enduml